fix heading anchor alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -305,14 +305,20 @@ a.mdx-link:hover {
 .anchor {
   margin: 1.2rem 0;
   scroll-margin-top: 12rem;
+  position: relative;
+  display: inline-block;
 }
 
 .anchor:hover::before {
   content: '#';
   font-size: 24px;
   position: absolute;
-  transform: translate(-0.8em, -1px);
+  right: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-right: 0.5rem;
   width: 0.8em;
+  color: rgb(var(--color-text-secondary));
 }
 
 .wavy {
@@ -419,9 +425,17 @@ a.mdx-link:hover {
   }
 }
 
+h1 {
+    font-size: var(--font-size-2xl);
+}
+
+h2 {
+  font-size: var(--font-size-xl);
+  font-weight: 600;
+}
 
 .prose h2 {
-  font-size: var(--font-size-xl);
+  font-size: var(--font-size-2xl);
   margin-top: 3rem;
   margin-bottom: 1.5rem;
   font-weight: 600;
